--- a/identity/adoc/01Introduction.adoc
+++ b/identity/adoc/01Introduction.adoc
@@ -1,5 +1,5 @@
 == Introduction
-This development guide on the MCP identity platform describes the current state of the MCP reference implementation as of {releaseDate}.
+This development guide on the MCP identity platform describes the current state of the MCP reference implementation.
 
 Please do not email us directly about usage questions. Instead use our Google Group at https://groups.google.com/forum/#!forum/maritimecloud for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.
 
